# de-zoomcamp-tasks

./: Readme.md  pyproject.toml
01-docker-terraform/: .gitignore  docker-compose.yaml  hw1_docker.ipynb
01-docker-terraform/terraform/: main.tf
02-workflow-orchestration/: answer.md  docker-compose.yml
02-workflow-orchestration/de-zoom-camp/: io_config.yaml  metadata.yaml
02-workflow-orchestration/de-zoom-camp/data_exporters/: load_to_postgesql.py  load_to_yandex_storage.py  test_data.sql
02-workflow-orchestration/de-zoom-camp/data_loaders/: get_nytaxi_green_data.py
02-workflow-orchestration/de-zoom-camp/pipelines/de_zoomcamp_task/: metadata.yaml
02-workflow-orchestration/de-zoom-camp/transformers/: modify_column.py
02-workflow-orchestration/mage_data/de-zoom-camp/.cache/: block_action_objects_mapping  blocks_to_pipeline_mapping  pipeline_details_mapping
02-workflow-orchestration/mage_data/de-zoom-camp/.operation_history/: 2024-03-03
02-workflow-orchestration/mage_data/de-zoom-camp/pipelines/de_zoomcamp_task/.variables/get_nytaxi_green_data/output_0/: sample_data.parquet
02-workflow-orchestration/mage_data/de-zoom-camp/pipelines/de_zoomcamp_task/.variables/modify_column/output_0/: data_column_types.json
02-workflow-orchestration/mage_data/de-zoom-camp/pipelines/de_zoomcamp_task/.variables/nytaxi_green/output_0/: data_column_types.json
02-workflow-orchestration/mage_data/de-zoom-camp/pipelines/de_zoomcamp_task/.variables/test_data/output_0/: data_column_types.json
