[tool.poetry]
name = "Data-Engineering ZoomCamp tasks"
version = "0.1.0"
description = ""
authors = ["skip"]

[tool.poetry.dependencies]
python = "^3.9"
ipykernel = "^6.16.0"
pandas = "^2.2.0"
pyarrow = "^15.0.0"
sqlalchemy = "^2.0.27"
psycopg2-binary = "^2.9.9"
jupysql = "^0.10.10"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"
wemake-python-styleguide = "^0.18.0"

[tool.poetry.scripts]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.jupysql.SqlMagic]
feedback = true
autopandas = true
